--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,3 @@
-<input type="radio" name="radio" (click)="changevalue(true)">true
-<input type="radio" name="radio" (click)="changevalue(false)">false
-<div *ngIf="isvalid">
-    this is valid data
-</div>
-<div *ngIf="!isvalid">
-    this is not valid data
-</div>
-<app-gaurav></app-gaurav>
+<app-ng-if></app-ng-if>
+<app-ng-switch></app-ng-switch>
 <router-outlet></router-outlet>
