decorator, grouping-ngfor, ng-switch, ngfor, trackby

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<app-grouping-ngfor></app-grouping-ngfor>
+<app-trackby></app-trackby>
+<app-ngfor></app-ngfor>
 <app-decorator></app-decorator>
 <app-ng-switch></app-ng-switch>
 <router-outlet></router-outlet>
