--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,26 @@
-<app-grouping-ngfor></app-grouping-ngfor>
-<app-trackby></app-trackby>
-<app-ngfor></app-ngfor>
-<app-decorator></app-decorator>
-<app-ng-switch></app-ng-switch>
-<router-outlet></router-outlet>
+<button><a [routerLink]="['/all-pipes']">all-pipes</a></button>
+<button><a [routerLink]="['/custom-pipes']">custom-pipes</a></button>
+<button><a [routerLink]="['/attribute-binding']">attribute-binding</a></button>
+<button><a [routerLink]="['/decorator']">decorator</a></button>
+<button><a [routerLink]="['/event']">event</a></button>
+<button><a [routerLink]="['/grouping-ngfor']">grouping-ngfor</a></button>
+<button><a [routerLink]="['/interpolation']">interpolation</a></button>
+<button><a [routerLink]="['/json-pipe']">json-pipe</a></button>
+<button><a [routerLink]="['/multiple-pipe']">multiple-pipe</a></button>
+<button><a [routerLink]="['/ng-switch']">ng-switch</a></button>
+<button><a [routerLink]="['/ngclass']">ngclass</a></button>
+<button><a [routerLink]="['/ngfor']">ngFor</a></button>
+<button><a [routerLink]="['/ngstyle']">ngstyle</a></button>
+<button><a [routerLink]="['/parameterized']">parameterized</a></button>
+<button><a [routerLink]="['/pipe']">pipe</a></button>
+<button><a [routerLink]="['/pipe-with-string']">pipe-with-string</a></button>
+<button><a [routerLink]="['/property-binding']">property-binding</a></button>
+<button><a [routerLink]="['/trackby']">trackby</a></button>
+<button><a [routerLink]="['/reactive-form']">reactive-form</a></button>
+<button><a [routerLink]="['/form']">form</a></button>
+<button><a [routerLink]="['/two-way-data-binding']">two-way-data-binding</a></button>
+<button><a [routerLink]="['/three-way-data-binding']">three-way-data-binding</a></button>
+<app-nested-array></app-nested-array>
+<div>
+    <router-outlet></router-outlet>
+</div>
