--- a/src/app/grouping-ngfor/grouping-ngfor.component.html
+++ b/src/app/grouping-ngfor/grouping-ngfor.component.html
@@ -1,4 +1,4 @@
-<h1>using of grouping ngfor</h1>
+<h1>using  grouping ngfor</h1>
 
 <ul *ngFor="let group of countrydetails">
     <li>{{group.country}}</li>
